[gd_scene load_steps=5 format=3 uid="uid://cdulcwjhsktck"]

[ext_resource type="Script" uid="uid://cuilwsjcdwnm" path="res://game/ui/workbench.gd" id="1"]
[ext_resource type="Theme" uid="uid://dvclbg3abieie" path="res://game/ui/steampunk_theme.tres" id="3"]
[ext_resource type="PackedScene" uid="uid://cyxjkid1roh05" path="res://game/ui/story_tutorial.tscn" id="5"]

[sub_resource type="StyleBoxFlat" id="4"]
bg_color = Color(0.08, 0.06, 0.04, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.48, 0.32, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 8
shadow_offset = Vector2(4, 4)

[node name="Workbench" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3")
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="MainLayout" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="LeftPanel" type="VBoxContainer" parent="MarginContainer/MainLayout"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2

[node name="StoryArea" type="Panel" parent="MarginContainer/MainLayout/LeftPanel"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
size_flags_vertical = 3

[node name="StoryContent" type="VBoxContainer" parent="MarginContainer/MainLayout/LeftPanel/StoryArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="StoryTitle" type="Label" parent="MarginContainer/MainLayout/LeftPanel/StoryArea/StoryContent"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Chronicle & Instructions"

[node name="StoryScroll" type="ScrollContainer" parent="MarginContainer/MainLayout/LeftPanel/StoryArea/StoryContent"]
layout_mode = 2
size_flags_vertical = 3

[node name="StoryText" type="RichTextLabel" parent="MarginContainer/MainLayout/LeftPanel/StoryArea/StoryContent/StoryScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "Your Chronicle will appear here..."
fit_content = true
scroll_active = false

[node name="ConsoleContainer" type="ScrollContainer" parent="MarginContainer/MainLayout/LeftPanel"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 3

[node name="Console" type="RichTextLabel" parent="MarginContainer/MainLayout/LeftPanel/ConsoleContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "[color=green]Welcome to the Steamfitter's Workbench![/color]
Ready to load your first challenge..."
fit_content = true
scroll_active = false

[node name="CenterPanel" type="VBoxContainer" parent="MarginContainer/MainLayout"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/MainLayout/CenterPanel"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="LevelSelect" type="OptionButton" parent="MarginContainer/MainLayout/CenterPanel/TopBar"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="LoadButton" type="Button" parent="MarginContainer/MainLayout/CenterPanel/TopBar"]
layout_mode = 2
text = "Load"

[node name="TrainButton" type="Button" parent="MarginContainer/MainLayout/CenterPanel/TopBar"]
layout_mode = 2
text = "Train"

[node name="StepButton" type="Button" parent="MarginContainer/MainLayout/CenterPanel/TopBar"]
layout_mode = 2
text = "Step"

[node name="ResetButton" type="Button" parent="MarginContainer/MainLayout/CenterPanel/TopBar"]
layout_mode = 2
text = "Reset"

[node name="LRLabel" type="Label" parent="MarginContainer/MainLayout/CenterPanel/TopBar"]
layout_mode = 2
text = "LR:"

[node name="LRSlider" type="HSlider" parent="MarginContainer/MainLayout/CenterPanel/TopBar"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.1

[node name="ReLUToggle" type="Button" parent="MarginContainer/MainLayout/CenterPanel/TopBar"]
layout_mode = 2
toggle_mode = true
text = "ReLU"

[node name="RunFwd" type="Button" parent="MarginContainer/MainLayout/CenterPanel/TopBar"]
layout_mode = 2
text = "Run Forward"

[node name="RunBack" type="Button" parent="MarginContainer/MainLayout/CenterPanel/TopBar"]
layout_mode = 2
text = "Backprop"

[node name="EvalButton" type="Button" parent="MarginContainer/MainLayout/CenterPanel/TopBar"]
layout_mode = 2
text = "Evaluate"

[node name="ZoomLabel" type="Label" parent="MarginContainer/MainLayout/CenterPanel/TopBar"]
layout_mode = 2
text = "Zoom:"

[node name="ZoomSlider" type="HSlider" parent="MarginContainer/MainLayout/CenterPanel/TopBar"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
max_value = 2.0
step = 0.1
value = 1.0

[node name="ReplayTut" type="Button" parent="MarginContainer/MainLayout/CenterPanel/TopBar"]
layout_mode = 2
text = "Replay Tutorial"

[node name="Settings" type="Button" parent="MarginContainer/MainLayout/CenterPanel/TopBar"]
layout_mode = 2
text = "Settings"

[node name="BlueprintArea" type="Panel" parent="MarginContainer/MainLayout/CenterPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="GraphEdit" type="GraphEdit" parent="MarginContainer/MainLayout/CenterPanel/BlueprintArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scroll_offset = Vector2(0, -31)
right_disconnects = true

[node name="RightPanel" type="VBoxContainer" parent="MarginContainer/MainLayout"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="ComponentDrawers" type="VBoxContainer" parent="MarginContainer/MainLayout/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="DrawerTitle" type="Label" parent="MarginContainer/MainLayout/RightPanel/ComponentDrawers"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Component Drawers"

[node name="InputDrawer" type="VBoxContainer" parent="MarginContainer/MainLayout/RightPanel/ComponentDrawers"]
layout_mode = 2

[node name="InputHeader" type="Button" parent="MarginContainer/MainLayout/RightPanel/ComponentDrawers/InputDrawer"]
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "Input Components"

[node name="InputPalette" type="VBoxContainer" parent="MarginContainer/MainLayout/RightPanel/ComponentDrawers/InputDrawer"]
layout_mode = 2

[node name="ProcessingDrawer" type="VBoxContainer" parent="MarginContainer/MainLayout/RightPanel/ComponentDrawers"]
layout_mode = 2

[node name="ProcessingHeader" type="Button" parent="MarginContainer/MainLayout/RightPanel/ComponentDrawers/ProcessingDrawer"]
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "Processing Components"

[node name="ProcessingPalette" type="VBoxContainer" parent="MarginContainer/MainLayout/RightPanel/ComponentDrawers/ProcessingDrawer"]
layout_mode = 2

[node name="OutputDrawer" type="VBoxContainer" parent="MarginContainer/MainLayout/RightPanel/ComponentDrawers"]
layout_mode = 2

[node name="OutputHeader" type="Button" parent="MarginContainer/MainLayout/RightPanel/ComponentDrawers/OutputDrawer"]
layout_mode = 2
toggle_mode = true
text = "Output Components"

[node name="OutputPalette" type="VBoxContainer" parent="MarginContainer/MainLayout/RightPanel/ComponentDrawers/OutputDrawer"]
layout_mode = 2

[node name="Inspector" type="VBoxContainer" parent="MarginContainer/MainLayout/RightPanel"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="InspectorTitle" type="Label" parent="MarginContainer/MainLayout/RightPanel/Inspector"]
layout_mode = 2
text = "Inspector"

[node name="InspectorContent" type="VBoxContainer" parent="MarginContainer/MainLayout/RightPanel/Inspector"]
layout_mode = 2

[node name="SettingsDialog" type="AcceptDialog" parent="."]
title = "Settings"
initial_position = 2
size = Vector2i(300, 200)

[node name="VBox" type="VBoxContainer" parent="SettingsDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2

[node name="UILabel" type="Label" parent="SettingsDialog/VBox"]
layout_mode = 2
text = "UI Scale:"

[node name="UIScale" type="HSlider" parent="SettingsDialog/VBox"]
layout_mode = 2
min_value = 0.5
max_value = 1.8
step = 0.1
value = 1.4

[node name="Fullscreen" type="CheckBox" parent="SettingsDialog/VBox"]
layout_mode = 2
text = "Fullscreen"

[node name="StoryDialog" type="AcceptDialog" parent="."]
title = "Story Update"
initial_position = 2
size = Vector2i(500, 350)
theme_override_styles/panel = SubResource("4")

[node name="StoryLabel" type="RichTextLabel" parent="StoryDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
theme_override_colors/default_color = Color(0.9, 0.8, 0.7, 1)
theme_override_font_sizes/normal_font_size = 16
fit_content = true

[node name="StoryTutorial" parent="." instance=ExtResource("5")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
