[gd_scene load_steps=6 format=3 uid="uid://ck33kc04evyun"]

[ext_resource type="Script" uid="uid://cuilwsjcdwnm" path="res://game/ui/workbench.gd" id="1"]
[ext_resource type="PackedScene" path="res://game/ui/tutorial_manager.tscn" id="2"]
[ext_resource type="Theme" uid="uid://dq1csyhs1pw1c" path="res://game/ui/steampunk_theme.tres" id="3"]
[ext_resource type="Script" path="res://game/ui/story_tutorial.gd" id="4"]
[ext_resource type="PackedScene" path="res://game/ui/story_tutorial.tscn" id="5"]

[node name="Workbench" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3")
script = ExtResource("1")

[node name="MainLayout" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LeftPanel" type="VBoxContainer" parent="MainLayout"]
layout_mode = 2
custom_minimum_size = Vector2(350, 0)

[node name="StoryArea" type="Panel" parent="MainLayout/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="StoryContent" type="VBoxContainer" parent="MainLayout/LeftPanel/StoryArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0

[node name="StoryTitle" type="Label" parent="MainLayout/LeftPanel/StoryArea/StoryContent"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "üìú Chronicle & Instructions"

[node name="StoryText" type="RichTextLabel" parent="MainLayout/LeftPanel/StoryArea/StoryContent"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
scroll_active = false
text = "Welcome to the Guild of Signalworks Engineers! Follow the tutorial to learn the art of mechanical machine learning."

[node name="Console" type="RichTextLabel" parent="MainLayout/LeftPanel"]
layout_mode = 2
custom_minimum_size = Vector2(0, 200)
bbcode_enabled = true
scroll_active = false
text = "üîß Engineering Console
Ready for your first contraption...
"

[node name="CenterPanel" type="VBoxContainer" parent="MainLayout"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TopBar" type="HBoxContainer" parent="MainLayout/CenterPanel"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)

[node name="LevelSelect" type="OptionButton" parent="MainLayout/CenterPanel/TopBar"]
layout_mode = 2
custom_minimum_size = Vector2(200, 0)

[node name="LoadButton" type="Button" parent="MainLayout/CenterPanel/TopBar"]
layout_mode = 2
text = "Load"

[node name="TrainButton" type="Button" parent="MainLayout/CenterPanel/TopBar"]
layout_mode = 2
text = "Train"

[node name="StepButton" type="Button" parent="MainLayout/CenterPanel/TopBar"]
layout_mode = 2
text = "Step"

[node name="ResetButton" type="Button" parent="MainLayout/CenterPanel/TopBar"]
layout_mode = 2
text = "Reset"

[node name="LRLabel" type="Label" parent="MainLayout/CenterPanel/TopBar"]
layout_mode = 2
text = "LR:"

[node name="LRSlider" type="HSlider" parent="MainLayout/CenterPanel/TopBar"]
layout_mode = 2
custom_minimum_size = Vector2(100, 0)
max_value = 1.0
step = 0.01
value = 0.1

[node name="ReLUToggle" type="CheckBox" parent="MainLayout/CenterPanel/TopBar"]
layout_mode = 2
text = "ReLU"

[node name="RunFwd" type="Button" parent="MainLayout/CenterPanel/TopBar"]
layout_mode = 2
text = "Run Forward"

[node name="RunBack" type="Button" parent="MainLayout/CenterPanel/TopBar"]
layout_mode = 2
text = "Backprop"

[node name="ZoomLabel" type="Label" parent="MainLayout/CenterPanel/TopBar"]
layout_mode = 2
text = "Zoom:"

[node name="ZoomSlider" type="HSlider" parent="MainLayout/CenterPanel/TopBar"]
layout_mode = 2
custom_minimum_size = Vector2(80, 0)
min_value = 0.4
max_value = 2.0
step = 0.1
value = 1.0

[node name="ReplayTut" type="Button" parent="MainLayout/CenterPanel/TopBar"]
layout_mode = 2
text = "Replay Tutorial"

[node name="Settings" type="Button" parent="MainLayout/CenterPanel/TopBar"]
layout_mode = 2
text = "Settings"

[node name="BlueprintArea" type="Panel" parent="MainLayout/CenterPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="GraphEdit" type="GraphEdit" parent="MainLayout/CenterPanel/BlueprintArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
right_disconnects = true
scroll_offset = Vector2(-462, -243)
snap_distance = 20
show_grid = true
grid_pattern = 1

[node name="RightPanel" type="VBoxContainer" parent="MainLayout"]
layout_mode = 2
custom_minimum_size = Vector2(280, 0)

[node name="ComponentDrawers" type="VBoxContainer" parent="MainLayout/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="DrawerTitle" type="Label" parent="MainLayout/RightPanel/ComponentDrawers"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "‚öôÔ∏è Component Drawers"

[node name="InputDrawer" type="VBoxContainer" parent="MainLayout/RightPanel/ComponentDrawers"]
layout_mode = 2

[node name="InputHeader" type="Button" parent="MainLayout/RightPanel/ComponentDrawers/InputDrawer"]
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "üì• Input Components"

[node name="InputPalette" type="VBoxContainer" parent="MainLayout/RightPanel/ComponentDrawers/InputDrawer"]
layout_mode = 2

[node name="ProcessingDrawer" type="VBoxContainer" parent="MainLayout/RightPanel/ComponentDrawers"]
layout_mode = 2

[node name="ProcessingHeader" type="Button" parent="MainLayout/RightPanel/ComponentDrawers/ProcessingDrawer"]
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "üîß Processing Components"

[node name="ProcessingPalette" type="VBoxContainer" parent="MainLayout/RightPanel/ComponentDrawers/ProcessingDrawer"]
layout_mode = 2

[node name="OutputDrawer" type="VBoxContainer" parent="MainLayout/RightPanel/ComponentDrawers"]
layout_mode = 2

[node name="OutputHeader" type="Button" parent="MainLayout/RightPanel/ComponentDrawers/OutputDrawer"]
layout_mode = 2
toggle_mode = true
text = "üì§ Output Components"

[node name="OutputPalette" type="VBoxContainer" parent="MainLayout/RightPanel/ComponentDrawers/OutputDrawer"]
layout_mode = 2

[node name="Inspector" type="VBoxContainer" parent="MainLayout/RightPanel"]
layout_mode = 2
custom_minimum_size = Vector2(0, 200)

[node name="InspectorTitle" type="Label" parent="MainLayout/RightPanel/Inspector"]
layout_mode = 2
text = "üîç Inspector"

[node name="WeightLabel" type="Label" parent="MainLayout/RightPanel/Inspector"]
layout_mode = 2
text = "Weight: 1.00"

[node name="WeightSlider" type="HSlider" parent="MainLayout/RightPanel/Inspector"]
layout_mode = 2
max_value = 2.0
step = 0.01
value = 1.0

[node name="StoryDialog" type="AcceptDialog" parent="."]
title = "Story"
initial_position = 2
size = Vector2i(400, 300)

[node name="StoryLabel" type="RichTextLabel" parent="StoryDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -49.0
bbcode_enabled = true
text = "Story content goes here..."

[node name="SettingsDialog" type="AcceptDialog" parent="."]
title = "Settings"
initial_position = 2
size = Vector2i(400, 300)

[node name="VBox" type="VBoxContainer" parent="SettingsDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -49.0

[node name="UIScale" type="HSlider" parent="SettingsDialog/VBox"]
layout_mode = 2
min_value = 0.5
max_value = 2.0
step = 0.1
value = 1.25

[node name="Fullscreen" type="CheckBox" parent="SettingsDialog/VBox"]
layout_mode = 2
text = "Fullscreen"

[node name="TutorialLayer" parent="." instance=ExtResource("2")]
layout_mode = 1
offset_left = -47.0
offset_top = -115.0
offset_right = -47.0
offset_bottom = -115.0

[node name="StoryTutorial" parent="." instance=ExtResource("5")]
layout_mode = 1
